--- a/src/libro_contactos/FXMLPantallaPrincipal.fxml
+++ b/src/libro_contactos/FXMLPantallaPrincipal.fxml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import com.jfoenix.controls.JFXListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="libro_contactos.FXMLPantallaPrincipalController">
-    <children>
-        <Button fx:id="button" layoutX="126" layoutY="90" onAction="#handleButtonAction" text="Click Me!" />
-        <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-      <FontAwesomeIconView glyphName="CHECK" layoutX="153.0" layoutY="63.0" size="20" wrappingWidth="15.0" />
-      <JFXButton layoutX="134.0" layoutY="123.0" text="Boton 1" />
-    </children>
+<AnchorPane id="AnchorPane" prefHeight="640.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="libro_contactos.FXMLPantallaPrincipalController">
+   <children>
+      <MenuBar fx:id="menubar" prefHeight="29.0" prefWidth="960.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="_Menú">
+            <items>
+                  <MenuItem fx:id="nuevo_btn_menu" mnemonicParsing="false" text="Nuevo contacto..." />
+                  <MenuItem fx:id="guardar_btn_menu" mnemonicParsing="false" text="Guardar" />
+              <MenuItem fx:id="salir_btn_menu" mnemonicParsing="false" onAction="#salir" text="Salir" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="_Ayuda">
+            <items>
+              <MenuItem fx:id="acercaDe_btn_menu" mnemonicParsing="false" text="Acerca de..." />
+                  <MenuItem fx:id="manual_btn_menu" mnemonicParsing="false" text="Manual de usuario..." />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <JFXListView layoutX="97.0" layoutY="165.0" prefHeight="393.0" prefWidth="766.0" />
+   </children>
 </AnchorPane>
