--- a/src/libro_contactos/estilos.css
+++ b/src/libro_contactos/estilos.css
@@ -35,3 +35,14 @@ and open the template in the editor.
     -fx-background-color: #0066ff;
 }
 
+.combo-box-popup .list-view .list-cell {
+    -fx-padding: 10 0 10 10;
+    -fx-pref-height: 35;
+}
+
+.combo-box-popup .list-view .scroll-bar .increment-arrow,
+.combo-box-popup .list-view .scroll-bar .decrement-arrow,
+.combo-box-popup .list-view .scroll-bar .increment-button,
+.combo-box-popup .list-view .scroll-bar .decrement-button {
+    -fx-padding:0;
+}
