--- a/src/libro_contactos/FXMLNuevoContacto.fxml
+++ b/src/libro_contactos/FXMLNuevoContacto.fxml
@@ -125,7 +125,8 @@
                         <Insets bottom="25.0" />
                      </VBox.margin>
                   </JFXTextArea>
-                  <JFXButton fx:id="agregarCampos_btn" prefHeight="26.0" prefWidth="285.0" text="Añadir campos adicionales">
+                  <VBox fx:id="Vbox_camposOpcionales" prefHeight="200.0" prefWidth="100.0" spacing="25.0" />
+                  <JFXButton fx:id="agregarCampos_btn" onAction="#mostrarPopUp" prefHeight="26.0" prefWidth="285.0" text="Añadir campos adicionales">
                      <VBox.margin>
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                      </VBox.margin>
