--- a/src/libro_contactos/FXMLNuevoContacto.fxml
+++ b/src/libro_contactos/FXMLNuevoContacto.fxml
@@ -60,7 +60,7 @@
                         <HBox fx:id="Hbox_telefonos" prefWidth="200.0" spacing="25.0">
                            <children>
                               <JFXComboBox fx:id="tipo_telefono" prefHeight="26.0" prefWidth="149.0" />
-                              <JFXTextField fx:id="telefono_textField" labelFloat="true" promptText="teléfono" />
+                              <JFXTextField fx:id="telefono_textField" labelFloat="true" onKeyReleased="#verificarTelefono" promptText="teléfono" />
                               <JFXButton fx:id="agregar_numero" onAction="#añadirTelefono">
                                  <graphic>
                                     <FontAwesomeIconView fx:id="agregarTelefono_btn" glyphName="PLUS_CIRCLE" size="16" />
@@ -84,7 +84,7 @@
                         <HBox fx:id="Hbox_correos" prefWidth="200.0" spacing="25.0">
                            <children>
                               <JFXComboBox fx:id="correo_tipo" prefHeight="26.0" prefWidth="148.0" />
-                              <JFXTextField fx:id="correo_TextField" labelFloat="true" promptText="correo" />
+                              <JFXTextField fx:id="correo_TextField" labelFloat="true" onKeyReleased="#verificarCorreo" promptText="correo" />
                               <JFXButton fx:id="agregar_correo" onAction="#añadirCorreo">
                                  <graphic>
                                     <FontAwesomeIconView fx:id="agregarCorreo_btn" glyphName="PLUS_CIRCLE" size="16" />
